:bug: fix z-index too high

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -81,3 +81,6 @@
 .ec-day {
   min-width: 45px !important;
 }
+.ec-now-indicator {
+  z-index: 49 !important;
+}
